libs/@local/hashql/syntax-jexpr/src/parser/snapshots/hql_syntax_jexpr__parser__expr__test__string_is_invalid.snap
---
source: libs/@local/hql/syntax-jexpr/src/parser/expr.rs
expression: "\"1234\""
---
[31m[jexpr::parser::string::invalid-identifier] Error:[0m J-Expr Frontend
   ╭─[ <unknown>:1:1 ]
   │
 1 │ "1234"
   │ │ 
   │ ╰─ Parsing Error: 
───╯
