libs/@local/hashql/syntax-jexpr/src/parser/snapshots/hql_syntax_jexpr__parser__expr__test__string_is_path-2.snap
---
source: libs/@local/hql/syntax-jexpr/src/parser/expr.rs
expression: "\"foo::bar\""
---
Expr {
    kind: Path(
        Path {
            segments: [
                Symbol {
                    value: "foo",
                    span: SpanId(
                        1,
                    ),
                },
                Symbol {
                    value: "bar",
                    span: SpanId(
                        2,
                    ),
                },
            ],
            span: SpanId(
                3,
            ),
        },
    ),
    span: SpanId(
        0,
    ),
}
